--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -9,6 +9,13 @@ body{
 .full{
     height:100vh;
 } 
+.btn{
+    background-color: rgb(94, 52, 25);
+    color: wheat;
+}
+.dropdown-menu{
+    padding: 7px;
+}
 
 header{
     width: 100%;
