move signup buttons

--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -5,7 +5,12 @@ body{
     height: 100%;
     width: 100%;
 }
-
+#sUp{
+    margin-right: 50px;
+}
+#sIn{
+    margin-right:10px;
+}
 .full{
     height:100vh;
 } 
