--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -2,8 +2,8 @@ body{
     background-image: url('https://image.freepik.com/free-photo/wooden-table-with-view-blurred-beverages-bar-backdrop_43029-507.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
-    width: 100%;
+    background-attachment: fixed;
+    height: 100vh;
 }
 
 .full{
@@ -43,7 +43,6 @@ h1{
 
 .logo{
     width: 100%;
-    height: 30vh;
 }
 
 .search{
