--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -56,7 +56,13 @@ h1{
     display:flex;
     justify-content: center;
 }
+.searchpage{
+    width: 100%;
+    height: 10vh;
+    display:flex;
+    justify-content: center;
 
+}
 .cardBody{
     width: 50%;
     margin: auto;
