--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -5,6 +5,15 @@ body{
     background-attachment: fixed;
     height: 100vh;
 }
+.fail{
+    text-align: end;
+    font-size: 15px;
+    color: #f5deb3;
+    padding-right: 20px;
+}
+
+
+
 #sUp{
     margin-right: 50px;
 }
@@ -27,6 +36,7 @@ header{
     display: flex;
     justify-content: flex-end;
 }
+
 
 main{
     height:80vh;
@@ -52,7 +62,6 @@ h1{
 
 .search{
     width: 100%;
-    height: 50vh;
     display:flex;
     justify-content: center;
 }
@@ -130,6 +139,3 @@ color: #f5deb3;
 
 /* Javascript*/
 
-.message{
-    color: #f5deb3;
-}
