--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -163,10 +163,10 @@ color: #f5deb3;
 /* Javascript*/
 
 #map {
-    height: 100%;
-    width: 100%;
+    height: 70%;
+    width: 50%;
     margin: auto;
-    margin-bottom: 20px;
+    position:fixed!important;
 } 
 
 
@@ -179,13 +179,6 @@ color: #f5deb3;
     margin-left: 5%;
     margin-right: 5%;
     
-}
-
-.mapContainer{
-    /* position: -webkit-sticky; */
-    position: sticky;
-    top:0;
-
 }
 
 @media only screen and (max-width: 768px) { 
