--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -19,8 +19,6 @@ body{
     color: #f5deb3;
     font-family: cursive;
     text-align: center;
-    
-    /* padding: 10px; */
 }
 
 .greeting{
@@ -55,7 +53,6 @@ header{
     justify-content: flex-end;
 }
 
-
 main{
     height:80vh;
 }
@@ -68,7 +65,6 @@ h1{
     justify-content: center;
     align-items: center;
 }
-
 
 .verified{
     height: 80%;
@@ -95,7 +91,6 @@ h1{
     margin: auto;
     background-color: rgb(83, 53, 33);
     color:  rgba(150, 115, 92, 0.849);
-
 }
 
 footer{
@@ -144,6 +139,7 @@ color: #f5deb3;
     font-size: 20px;
     text-align: center;
 }
+
 .register, .maybeLater{
     background-color: rgb(94, 52, 25);
     color: #f5deb3;
@@ -154,7 +150,6 @@ color: #f5deb3;
     padding: 10px;
 }
 
-
 .headerBtnContainer2{
     padding: 10px;
 }
@@ -163,22 +158,22 @@ color: #f5deb3;
 /* Javascript*/
 
 #map {
-    height: 70%;
-    width: 50%;
+    z-index:1;
+    height: 30%;
+    width: 100%;
     margin: auto;
-    position:fixed!important;
+    top:50px;
+    position:-webkit-sticky!important;
+    position:sticky!important;  
 } 
-
 
 .fail {
     right: 0;
-    /* padding: 2px; */
     position: absolute;
 }
 .content{
     margin-left: 5%;
     margin-right: 5%;
-    
 }
 
 @media only screen and (max-width: 768px) { 
