--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -159,7 +159,7 @@ color: #f5deb3;
 
 #map {
     z-index:1;
-    height: 30%;
+    height: 500px;
     width: 100%;
     margin: auto;
     top:50px;
